# django-supervisor

./: pyproject.toml  setup.py
djsupervisor/: config.py
djsupervisor/management/commands/: supervisor.py
